# SafePitch

./: .dockerignore  .gitignore  README.md  SPEC.md  build_error.txt  crew_output.json  pyproject.toml  save_to_sqlite.py  test_audit_result.json  test_crew_local.py  test_lambda_standalone.py  test_run.py  verification_report.md
.github/scripts/: check_verification.py
.github/workflows/: ci.yml  deploy.yml
Deployment/: Dockerfile  Dockerfile.slim  lambda_function.py
Parser_Deployment/: Dockerfile  lambda_function.py  requirements.txt
src/safepitch/: crew.py  main.py  models.py  test_audit_result.json
src/safepitch/config/: agents.yaml  tasks.yaml
tests/: test_crew_local.py  test_lambda_locally.py  test_truth_scorer.py
