[project]
name = "safepitch"
version = "0.1.0"
description = "safePitch using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "anthropic>=0.89.0",
    "crewai[google-genai,tools]==1.8.1",
    "langchain-anthropic>=1.4.0",
    "langchain-google-genai>=0.0.1",
    "litellm>=1.0.0",
    "fastapi>=0.100.0",
    "apscheduler>=3.10.0",
    "email-validator>=2.0.0",
]

[project.scripts]
safepitch = "safepitch.main:run"
run_crew = "safepitch.main:run"
train = "safepitch.main:train"
replay = "safepitch.main:replay"
test = "safepitch.main:test"
run_with_trigger = "safepitch.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
